<resources>
    <string name="app_name">Fruti</string>
    <string name="dots">...</string>
    <string name="title_home">Rezepte</string>
    <string name="food_name_pfann">Pfannkuchen</string>
    <string name="food_name_bolo">Spaghetti Bolognese</string>
    <string name="food_name_icetea">Eistee</string>
    <string name="food_name_waffles">Waffeln</string>
    <string name="food_name_fruit">Obstsalat</string>
    <string name="bolo_zutaten">Spaghetti \nHackfleisch oder Sojagranulat \nTomaten\nZwiebeln\nKnoblauch\nOlivenöl\nOregano\nSalz\nPfeffer\nTomatenmark\nParmesan</string>
    <string name="bolo_mengen">"500g\n500g\n6\n2\n1 Knolle\n50 ml\n2 TL\n\n\n1 Tube\netwas"</string>
    <string name="bolo_anleitung">Zwiebeln in Scheiben schneiden, in eine Pfanne geben, salzen und in Öl glasig schmoren . Tomaten vom Strunk befreien und in Scheiben schneiden. Nord und Südpol entfernen. Zu den Zwiebeln geben. Einmal durchrühren und dann einen Teller drüberlegen, sodass der gesamte Inhalt der Pfanne unter dem Teller verborgen ist, und ca. 15 Minuten bei geringer Hitze schmoren lassen.
Das Beefhack in eine zweite Pfanne geben und ohne die Zugabe von Fett braten, wobei mit einer Gabel das Hack auseinander gedrückt wird, bis sich das gesamte Hack in kleine braune Kügelchen oder Klümpchen verwandelt hat. Wenn die Zwiebeln und Tomaten zu einer weichen Masse geschmort sind, das Beefhack dazu geben sowie 4- 5 ungeschälte Knoblauchzehen.
Jetzt die Spaghettis in Wasser mit Salz und einem guten Schuss Olivenöl aufsetzen.
Dann den Inhalt der Tube Tomatenmark in die Pfanne dazugeben sowie nach Bedarf ca. 0.2 L Wasser.
Das Wasser runterkochen lassen und hin- und wieder umrühren. Mit einer guten Portion Olivenöl auffüllen. Abermals aufkochen lassen und etwas Wasser dazu, damit die Soße nicht zu fest wird.
Dann reichlich Oregano dazu, gut salzen und etwas Pfeffer. Zum Schluss noch eine Prise Zucker und bei bedarf noch etwas kleingeschnittener Knoblauch
Die Spaghetti probieren und das Wasser abgießen, bevor sie keinen Wiederstand beim Biss mehr bieten. Spaghetti sowie die Pfanne mit der Soße auf den Tisch und mit geriebenen Parmesankäse servieren.</string>
    <string name="bolo_src">Quelle: chefkoch.de</string>
    <string name="bolo_aufwand">Arbeitszeit: ca. 45 Min. / Schwierigkeitsgrad: normal</string>
    <string name="obstsalat_zutaten">Kiwi\nOrange\nBanane\nBlaubeereen\nHimbeereen\nErdbeeren</string>
    <string name="obstsalat_mengen">1\n1\n1\n4\n4\n3</string>
    <string name="obstsalat_anleitung">Die Orange, die Banane und die Kiwi schälen, in Würfel schneiden und in eine Schale geben. Erdbeeren, Himbeeren und Blaubeeren waschen. Die Erdbeeren halbieren und mit den ganzeen Himbeeren und Blaubeeren in die Schüssel geben. Gut umrühren, damit sich die Säfte vermischen. Auf Wunsch kann auch etwas Honig hinzugefügt werden. </string>
    <string name="fruit_aufwand">Arbeitszeit: ca. 15 Min. / Schwierigkeitsgrad: einfach</string>
    <string name="pancake_zutaten">Mehl \nMilch\nSalz\nEier\nMineralwasser\nButter zum Braten</string>
    <string name="pancake_mengen">400g \n750 ml\n1 Prise\n3\n1 Schuss\netwas</string>
    <string name="pancake_anleitung">Das Mehl, die Milch, die Eier und die Prise Salz mit dem Handrührgerät zu einem glatten Teig verrühren, bis dieser leichte Blasen wirft. Dann den Teig für ca. eine halbe Stunde im Kühlschrank ruhen lassen.
        Dann den Teig aus dem Kühlschrank nehmen, noch einen guten Schuss Mineralwasser zufügen und nochmals kurz durchrühren.
        Die Herdplatte anfangs auf höchster Stufe aufheizen und etwas Butter in die Pfanne geben.
        Am gleichmäßigsten gelingen die Pfannkuchen so:
        Die heiße Pfanne von der Kochstelle nehmen und die Butter durch geschicktes Schwenken gleichmäßig verteilen. Nun mit einem großen Schöpflöffel eine Kelle Teig in die heiße Pfanne geben und diesen ebenfalls durch Schwenken gleichmäßig verteilen.
        Wichtig:
        Nun auf jeden Fall lange genug warten, bis die Unterseite richtig schön gebräunt und der Pfannkuchen entsprechend fest geworden ist. Das merkt man ganz leicht, wenn man versucht den Pfannkuchen mit dem Pfannenwender anzuheben. Wenn das ganz einfach geht, dann kann man den Pfannkuchen problemlos wenden, ohne dass dieser zerreißt. Nun noch die zweite Seite schön goldgelb backen.</string>
    <string name="pancake_aufwand">Arbeitszeit: ca. 30 Min. / Schwierigkeitsgrad: normal</string>
    <string name="topping_zutaten">Erdbeeren \nHimbeeren\nBlaubeeren\nHonig</string>
    <string name="topping_mengen">5\n200 g\n100 g\n1 Esslöffel</string>
    <string name="waffeln_anleitung">Den Teig zusammenrühren und das Waffeleisen erhitzen. Wenn das Eisen startklar ist, mit Butter bestreichen. Die Waffeln so lange im Eisen behalten, bis sie goldbraun sind. Die Früchte für das Topping mit Honig zusammenrühren und als Topping verwenden.</string>
    <string name="waffeln_aufwand">Arbeitszeit: ca. 30 / Schwierigkeitsgrad: normal</string>
    <string name="eistee_zutaten">Schwarzer Tee \nWasser\nZitrone\nHonig\nPfirsichnektar</string>
    <string name="eistee_mengen">2 Beutel \n500 ml\n1\n1 Esslöffel\n6 Esslöffel</string>
    <string name="eistee_anleitung">Das Wasser im Wasserkocher kochen und in eine Kanne füllen. Die Teebeutel reinlegen und 5 Minuten ziehen lassen. Danach die Zitrone auspressen und den Saft in die Kanne gießen. Nun den Honig in das heiße Wasser verrührern und den Pfirsichnektar dazugeben. Dein Eistee wird aber nur zum Eistee, wenn du ihn 1 Stunde kühlen lässt und Eiswürfeel dazugibts.</string>
    <string name="eistee_aufwand">Arbeitszeit: ca. 15 Min. / Schwierigkeitsgrad: einfach</string>
    <string name="food_name_1">Bolognese</string>
    <string name="title_dashboard">Wissen</string>
    <string name="wissen">Die Ernährungspyramide</string>
    <string name="carbs">Kohlenhydrate</string>
    <string name="carbs_info">Zu viel Fett und zu viel Zucker machen dick und krank. Dennoch brauchen wir beide Nahrungsbestandteile zum Leben. Doch wie können wir unseren Kohlenhydrate-Bedarf künftig decken, wenn die Bevölkerungszahl weltweit schneller steigt als die Nahrungsmittel-Produktion? Zum Beispiel mit "Smart Breeding".

Eigentlich brauchen wir keinen künstlich hergestellten Zucker, denn der Körper kann die lebensnotwendige Glucose ohne Probleme aus Kohlenhydraten wie Obst, Gemüse, Reis, Kartoffeln und auch aus Fleisch gewinnen.

Dafür muss aber genug Gemüse und Getreide da sein, um die Nachfrage weltweit zu decken. Wie könnte man sicher für Nachschub sorgen – auch wenn die Weltbevölkerung stark wächst?</string>
    <string name="carbs_info2">Um funktionieren zu können, braucht unser Körper Kohlenhydrate. Mit Kohle haben sie trotz ihres Namens nichts zu tun, stattdessen geht es um unsere Ernährung.

Unser Körper braucht ständig Energie. Nicht nur, weil wir laufen, schwimmen oder Rad fahren wollen. Auch das Atmen, der Herzschlag, die gleichmäßige Körpertemperatur oder die Verdauung müssen in Schwung gehalten werden. Damit wir Energie bekommen, essen wir. In unserer Nahrung sind neben Eiweißen, Fetten, Mineralstoffen und Vitaminen auch Kohlenhydrate.

Kohlenhydrate sind wichtig für den Körper. Unser Gehirn und unsere Muskeln brauchen sie, damit sie arbeiten können. Über das Blut gelangen sie in die Zellen und ermöglichen es dem Körper, seine Arbeit zu verrichten. Die Kohlenhydrate bestehen aus sogenannten Zuckermolekülen. Zu den Kohlenhydraten gehören aber nicht nur süß schmeckende Lebensmittel wie Obst oder Schokolade. Auch Brot, Kartoffeln oder Nudeln sind Kohlenhydrate.

Experten schauen bei den Kohlenhydraten, wie viele Zuckerbausteine sie enthalten. Es gibt Einfachzucker, Zweifachzucker und Vielfachzucker. Dies zu wissen, ist für die Ernährung sehr wichtig. Denn die Kohlenhydrate werden im Körper unterschiedlich verarbeitet. Einfachzucker stecken beispielsweise im Obst, denn dort ist Fruchtzucker enthalten. Zu den Zweifachzuckern zählen Fachleute den Zucker, der in Süßigkeiten wie Gummibärchen und Schokolade steckt. Vielfachzucker sind vor allem in Getreide, Vollkornprodukten oder Kartoffeln enthalten.

Kohlenhydrate haben oft einen schlechten Ruf, weil sie als Dickmacher gelten. Doch das stimmt nur bedingt. Denn Kartoffeln oder Nudeln beispielsweise haben gar nicht so viel Kalorien. Im Gegensatz zu Süßigkeiten muss der Körper die enthaltenen Vielfachzucker erst wieder in Einfachzucker zerlegen, damit sie verwertet werden können. Das sorgt dafür, dass wir nicht sofort wieder Heißhunger haben. Süßigkeiten kann der Körper sofort verwerten. Der Körper verlangt dann aber auch schnell wieder nach etwas Neuem. Das sorgt dafür, dass wir womöglich mehr essen und daher an Gewicht zulegen.

</string>
    <string name="carbs_src">Quelle: http://www.news4kids.de</string>
    <string name="carbs_empfehlung">täglich angemessene Portionen</string>
    <string name="drinks">Getränke</string>
    <string name="drinks_src">Quelle: https://www.onmeda.de/ernaehrung</string>
    <string name="drinks_info">Die Basis und damit die unterste Ebene der Ernährungspyramide bilden Getränke. Flüssigkeit ist demnach die Grundlage einer gesunden Ernährung! Die Getränke sollten vor allem aus Wasser und Kräuter- oder Früchtetees bestehen. Verdünnen Sie Säfte mit reichlich Wasser, ansonsten enthalten sie zu viel Zucker.</string>
    <string name="drinks_empfehlung">täglich mindestens 1,5l Mineralwasser</string>
    <string name="nutsoils">Nüsse und Öle</string>
    <string name="nuts_info">Samen und Nüsse sind sehr gesund und sollten regelmäßig verzehrt werden. In den letzten Jahren wird vermehrt darauf hingewiesen, dass Samen und Nüsse durch die ungesättigten Fettsäuren gesund sind und der Körper regelmäßig damit versorgt werden sollte. Einig darüber sind sich die Wissenschaftler erst seit einigen Jahren, nachdem verschiedene Studien zum Verzehr von Samen und Nüsse gemacht wurden.</string>
    <string name="oils_info">Mindestens ein Drittel der zugeführten Fettmenge sollte aus Ölen mit mehrfach ungesättigten Fettsäuren bestehen. Da Fette für den menschlichen Organismus wichtige Aufgaben erfüllen, kann die Fettzufuhr nur begrenzt gesenkt werden. Fette und Öle sind Träger essenzieller Fettsäuren, Träger fettlöslicher Vitamine wie Vitamin A, D, E, K und dem Provitamin Carotin. </string>
    <string name="nuts_empfehlung">täglich einen Esslöffel hochwertiger Pflanzenöle und Nüsse</string>
    <string name="nuts_src">Quelle: https://lebensmittel-warenkunde.de</string>
    <string name="junks">Fettes, Süßes und Salziges</string>
    <string name="junks_empfehlung">maximal eine kleine Portion pro Tag</string>
    <string name="junks_info">Süßigkeiten und Salziges bilden keine Grundlage für eine gesunde Ernährung, sondern bilden lediglich einen Luxus den wir uns alle gerne erlauben. Allerdings sollte das Naschen in Maßen gehalten werden und am besten nach einer Hauptmahlzeit passieren.</string>
    <string name="junks_src">Quelle: eigener Text</string>
    <string name="proteins">Eiweiße von tierischen Produkten</string>
    <string name="vegs">Obst und Gemüse</string>
    <string name="werbistdu">Wer bist du?</string>
    <string name="edit">Name eingeben</string>
    <string name="speichern">Speichern</string>
    <string name="anleitung">Anleitung</string>
    <string name="zutaten">Zutaten</string>
    <string name="zumSpiel">zum Spiel</string>
</resources>