<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_vegs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_vegs_ueberschrift"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/junks"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/image_vegs"
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:contentDescription="@string/vegs"
            app:srcCompat="@drawable/button_veggies" />

        <TextView
            android:id="@+id/text_carbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:text="@string/carbs_info"
            android:textSize="14sp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
