<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true">


        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:contentScrim="@color/colorPrimary"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@color/trans">

            <ImageView
                android:id="@+id/img_recipe"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/windowBackground"
                android:contentDescription="@string/app_name"
                android:fitsSystemWindows="true"
                android:scaleType="centerInside"
                android:src="@drawable/obstsalat" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_name_fruit"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:textSize="25dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:gravity="center_vertical" />




            <android.support.v7.widget.CardView
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:layout_marginTop="14dp"
                        android:paddingBottom="16dp"
                        android:text="@string/zutaten"
                        android:fontFamily="casual"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">
                            <TextView
                                android:id="@+id/measure"
                                android:paddingLeft="14dp"
                                android:paddingRight="14dp"
                                android:textSize="16sp"
                                android:textColor="@color/colorAccent"
                                android:layout_width="match_parent"
                                android:text="@string/obstsalat_mengen"
                                android:layout_height="wrap_content" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">
                            <TextView
                                android:id="@+id/ingredient"
                                android:paddingLeft="14dp"
                                android:paddingRight="14dp"
                                android:textSize="16sp"
                                android:text="@string/obstsalat_zutaten"
                                android:textColor="@color/textPrimary"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anleitung"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/ic_info"
                android:drawableRight="@drawable/ic_info" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp">



                <TextView
                    android:id="@+id/aufwand"
                    android:text="@string/fruit_aufwand"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/textPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp">


            <TextView
                android:id="@+id/instructions"
                android:text="@string/obstsalat_anleitung"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="16sp"
                android:textColor="@color/textPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>
            <ImageView
                android:id="@+id/zumSpiel"
                android:layout_width="77dp"
                android:layout_height="73dp"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/logo_apfel_kopie" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zumSpiel"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:fontFamily="casual"
                android:textStyle="bold"/>



        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
