<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/werbistdu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/werbistdu" />


        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageButton
                android:id="@+id/pfeil_vor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/button_pfeil1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageButton>


            <ImageView
                android:id="@+id/profil_bild1"
                android:layout_width="0dp"

                android:layout_height="0dp"


                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:padding="0dp"
                android:src="@drawable/obstsalat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/pfeil_vor"
                app:layout_constraintRight_toLeftOf="@+id/pfeil_weiter"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/pfeil_weiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:src="@drawable/button_pfeil2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit" />

            <Button
                android:id="@+id/speichern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speichern" />


        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>